ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: fullstack-ingress
 annotation:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - host: 
    http:
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: fullstack-service
             port:
              number: 80
